@@ -29,6 +29,7 @@
       --add-reads com.oracle.coherence.cdi.server=ALL-UNNAMED
       --add-reads com.oracle.coherence.mp.config=ALL-UNNAMED
       --add-opens java.base/java.lang=weld.core.impl
+      --add-opens java.base/java.lang=ALL-UNNAMED
     </failsafe.modules.argline>
   </properties>
 
@@ -57,22 +58,22 @@
     <dependency>
       <groupId>io.helidon.microprofile.bundles</groupId>
       <artifactId>helidon-microprofile-core</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>io.helidon.microprofile.weld</groupId>
+          <artifactId>weld-se-core</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>io.helidon.microprofile.config</groupId>
       <artifactId>helidon-microprofile-config</artifactId>
     </dependency>
-
     <dependency>
-      <groupId>org.jboss.weld.se</groupId>
-      <artifactId>weld-se-core</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.jboss.spec.javax.interceptor</groupId>
-          <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
-        </exclusion>
-      </exclusions>
+      <groupId>io.helidon.config</groupId>
+      <artifactId>helidon-config-metadata</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.jboss.weld</groupId>
       <artifactId>weld-junit5</artifactId>
